--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Livro de Receitas</h1>
-    <a href="./receitas/lasanha.html">Lasanha</a>
+    <li><a href="./receitas/lasanha.html">Lasanha</a></li>
+    <li><a href="./receitas/bolo.html">Bolo</a></li>
+    <li><a href="./receitas/arroz.html">Arroz</a></li>
 </body>
 </html>
